Remove use of deprecated Calcite API calls